fixed next page button alignment

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ title {
     margin-bottom: 10px; /* Add space between cards */
     /* shadow under card */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: space-between;
 }
 
 h1 {
@@ -78,6 +80,7 @@ h1 {
 
 #search-container {
     order: 2;
+    max-width: 800px;
 }
 
 /* Centered search bar */
@@ -96,20 +99,17 @@ h1 {
     text-align: center; 
 }
 
-#header-container, #search-container {
-    z-index: 1;
-}
 
 #news {
-    z-index: 0;
+    z-index: 1;
     margin-top: 20px; /* Add top margin to push it down */
     order: 3;
     margin-bottom: 30px;
 }
 
-.centered, .card {
-    max-width: 800px; /* Set this to whatever value looks good at half-page size */
-    margin: 0 auto; /* This will center the elements if they are smaller than the max-width */
+.centered, .card, .pagination-container {
+    max-width: 800px;  /* This should match */
+    margin: 0 auto;  /* Centers the block if smaller than max-width */
 }
 
 /* Implement pagination */
@@ -117,14 +117,17 @@ h1 {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    margin-left: auto;  /* Center the container */
+    margin-right: auto; /* Center the container */
     visibility: hidden;  /* Initially hidden */
     position: fixed;
     bottom: 0;
     width: 80%;
+    max-width: 800px;  /* Make sure this matches with your card and search container max-width */
     padding-bottom: 5px;
 }
   
-  .pagination-buttons {
+.pagination-buttons {
     background-color: #007BFF;
     color: white;
     padding: 12px 24px;
@@ -133,17 +136,22 @@ h1 {
     cursor: pointer;
     text-align: center;
     margin-top: 20px;
-  }
+}
   
-  .pagination-buttons:hover {
+.pagination-buttons:hover {
     background-color: #0056b3;
     border: 1px solid #edf0f4;
-  }
-  
-  #prevPage, #nextPage {
-    width: 100px; 
-  }
+}
 
-  .container #nextPage {
-    margin-right: 20px
-  }
+#prevPage, #nextPage {
+    width: 100px;
+}
+
+.card-body {
+    flex-grow: 1;
+}
+
+.card-buttons {
+    display: flex;
+    justify-content: center;
+}
